argocd-apps/my-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: computer-academy-webapp
  labels:
    app: computer-academy-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: computer-academy-webapp
  template:
    metadata:
      labels:
        app: computer-academy-webapp
    spec:
      containers:
        - name: computer-academy-webapp
          image: ketanmahajan24/computer-academy-webapp:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
