argocd-apps/my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: computer-academy-webapp
spec:
  type: ClusterIP
  selector:
    app: computer-academy-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
